[workspace]
members = [ "day10a", "day10b",
    "day1a",
    "day1b",
    "day2a",
    "day2b",
    "day3a",
    "day3b",
    "day4a",
    "day4b",
    "day5a",
    "day5b",
    "day6a",
    "day6b",
    "day6b-slow",
    "day7a",
    "day7b",
    "day8a", "day8b", "day9a", "day9b",
]
resolver = "2"
